@@ -153,6 +153,7 @@ ot_add_source_file (UniformFactory.cxx)
 ot_add_source_file (UserDefined.cxx)
 ot_add_source_file (UserDefinedFactory.cxx)
 ot_add_source_file (VonMises.cxx)
+ot_add_source_file (VonMisesFactory.cxx)
 ot_add_source_file (WeibullMax.cxx)
 ot_add_source_file (WeibullMaxFactory.cxx)
 ot_add_source_file (WeibullMaxMuSigma.cxx)
@@ -312,6 +313,7 @@ ot_install_header_file (Uniform.hxx)
 ot_install_header_file (UserDefinedFactory.hxx)
 ot_install_header_file (UserDefined.hxx)
 ot_install_header_file (VonMises.hxx)
+ot_install_header_file (VonMisesFactory.hxx)
 ot_install_header_file (WeibullMax.hxx)
 ot_install_header_file (WeibullMaxFactory.hxx)
 ot_install_header_file (WeibullMaxMuSigma.hxx)
