@@ -486,6 +486,7 @@ ot_check_test (UniformFactory_std)
 ot_check_test (UserDefined_std)
 ot_check_test (UserDefinedFactory_std)
 ot_check_test (VonMises_std)
+ot_check_test (VonMisesFactory_std)
 ot_check_test (WeibullMax_std)
 ot_check_test (WeibullMaxFactory_std)
 ot_check_test (WeibullMin_std)
