@@ -574,6 +574,7 @@ ot_pyinstallcheck_test (UniformFactory_std)
 ot_pyinstallcheck_test (UserDefined_std)
 ot_pyinstallcheck_test (UserDefinedFactory_std)
 ot_pyinstallcheck_test (VonMises_std)
+ot_pyinstallcheck_test (VonMisesFactory_std)
 ot_pyinstallcheck_test (WeibullMax_std)
 ot_pyinstallcheck_test (WeibullMaxFactory_std)
 ot_pyinstallcheck_test (WeibullMin_std)
