@@ -12,6 +12,7 @@
  * KarhunenLoeveValidation
  * IsotropicCovarianceModel
  * KroneckerCovarianceModel
+ * VonMisesFactory
 
 ==== API changes ====
  * Removed deprecated Pairs alias
@@ -60,6 +61,7 @@
  * #1787 (CovarianceMatrix from SymmetricMatrix raises InvalidArgumentException)
  * #1790 (LinearModelResult.getFormula() method is not updated by Stepwise regression)
  * #1794 (Some doc examples seem to behave with new infrastructure)
+ * #1796 (VonMisesFactory is missing)
 
 
 == 1.16 release (2020-11-16) == #release-1.16
